syntax = "proto3";
package Stridelabs.stride.stakeibc;

import "gogoproto/gogo.proto";
import "stakeibc/params.proto";
import "stakeibc/ica_account.proto";
import "stakeibc/host_zone.proto";
import "stakeibc/epoch_tracker.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/Stride-Labs/stride/x/stakeibc/types";

// GenesisState defines the stakeibc module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  // list of zones that are registered by the protocol
  ICAAccount iCAAccount = 4;
  repeated HostZone hostZoneList = 5 [(gogoproto.nullable) = false];
  uint64 hostZoneCount = 6;
  // stores a map from hostZone base denom to hostZone
  map<string, string> denomToHostZone = 9;
  repeated EpochTracker epochTrackerList = 10 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
  reserved 3, 11;
}
