syntax = "proto3";
package Stridelabs.stride.stakeibc;

import "gogoproto/gogo.proto";
import "stakeibc/params.proto";
import "stakeibc/host_zone.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/Stride-labs/stride/x/stakeibc/types";

// GenesisState defines the stakeibc module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  // list of zones that are registered by the protocol
  repeated HostZone hostZone = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
